# 1CTextFinder

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
include/: parser.h
src/: CMakeLists.txt  parser.cpp
src/examples/: AllInOne.cpp  CMakeLists.txt  CountEntries.cpp  FirstOccurrence.cpp  OccurrenceContext.cpp
